# tensorRTWrapper

./: readme.md
code/: CMakeLists.txt
code/include/: PluginFactory.h  TrtNet.h  UpsampleLayer.h  YoloLayer.h
code/src/: EntroyCalibrator.cpp  TrtNet.cpp  UpsampleLayer.cpp  UpsampleLayer.cu  YoloLayer.cu
sample/: CMakeLists.txt  configs.h  eval.cpp  evalClassifNet.cpp  runNet.cpp  runTwoNets.cpp
src/: CMakeLists.txt  EntroyCalibrator.cpp  PluginFactory.h  TrtNet.cpp  TrtNet.h
